--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "url": "https://github.com/jasonbellamy"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.12.0"
   },
   "scripts": {
     "test": "mocha"
   },
   "keywords": [
+    "plum",
     "yeoman-generator"
   ],
   "dependencies": {
@@ -24,12 +25,10 @@
     "linesert": "1.0.0",
     "lodash": "^2.4.1",
     "yeoman-generator": "^0.18.0",
+    "yo": "^1.4.7",
     "yosay": "^0.3.0"
   },
   "devDependencies": {
     "mocha": "*"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0"
   }
 }
