--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lineder": "^0.1.0",
     "linesert": "1.0.0",
     "lodash": "^2.4.1",
+    "update-notifier": "^0.5.0",
     "yeoman-generator": "^0.18.0",
     "yo": "^1.4.7",
     "yosay": "^0.3.0"
